--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
   "license": "MIT",
   "homepage": "https://www.facebook.com/koguchi.chino",
   "dependencies": {
-    "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
-    "discord.io": "^2.5.3",
+    "discord.js": "^11.3.0",
     "express": "^4.16.2",
-    "request": "^2.83.0",
-    "winston": "^2.4.0"
+    "request": "^2.83.0"
   }
 }
