--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
+    "jimp": "^0.2.28",
     "request": "^2.83.0"
   }
 }
