--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "jimp": "^0.2.28",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "rimraf": "^2.6.2"
   }
 }
